apps/gauzy/src/app/pages/jobs/search/components/apply-job-manually/apply-job-manually.component.scss
@import 'gauzy/_gauzy-dialogs';
:host {
	display: block;
	width: 100%;
	.main {
		padding: 100px;
	}
	nb-card {
		background-color: var(--gauzy-card-1);
		nb-card-body {
			background-color: var(--gauzy-card-2);
			nb-card, nb-card-body {
				background-color: var(--gauzy-card-1);
			}
		}
	}
	::ng-deep {
		.cancel {
			@include nb-rtl(justify-content, flex-start);
		}
		.title {
			@include nb-rtl(text-align, right);
		}
	}
	.well {
		height: 50px;
		display: flex;
		align-items: center;
		justify-content: center;
		color: var(--gauzy-text-color-2);
	}
	.my-drop-zone {
		border: dashed 3px var(--gauzy-border-default-color);
		border-radius: var(--border-radius);
	}
	.nv-file-over {
		border: dashed 3px red;
		border-radius: var(--border-radius);
	}
	.sync-container {
		float: right;
		display: flex;
		align-items: center;
		gap: 4px;
		.sync {
			color: var(--gauzy-text-color-2);
			cursor: pointer;
			&.spin {
				color: var(--text-primary-color);
				animation: rotate 1s linear 0s infinite;
			}
			@keyframes rotate {
				0% {
					transform: rotate(0deg);
				}
				100% {
					transform: rotate(360deg);
				}
			}
		}
		span {
			color: var(--text-primary-color);
		}
	}
}

